--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="theme-color" content="#1976d2">
+
+  <noscript>Javascript is required to use this application.</noscript>
 </head>
 <body class="default-theme">
   <app-root></app-root>
