Customer Grid & List

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
       const storageManager = hasStorage && navigator.storage;
       const estimate = storageManager.estimate();
 
-      console.log(estimate);
+      // console.log(estimate);
       navigator.storage.persist().then(granted => {
-        console.log(estimate);
+        // console.log(estimate);
 
         // if (granted) {
         //   console.log(estimate);
